--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -3,10 +3,14 @@
 
 <div class="row">
   <div class="col">
-    <shared-search-box
-      placeHolder="Search By Region"
-      (onValue)="searchByRegion($event)"
-    ></shared-search-box>
+    <button
+      *ngFor="let region of regions"
+      class="btn btn-primary mx-1 mb-1"
+      (click)="searchByRegion(region)"
+      [ngClass]="{'btn-success': region === selectedRegion}"
+    >
+      {{ region }}
+    </button>
   </div>
 </div>
 <hr />
