--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,7 +1,9 @@
+<!-- (keyup.enter)="emitValue(txtSearchInput.value)" -->
 <input
+  [value]="initialValue"
   type="text"
   [placeholder]="placeHolder"
   class="form-control"
-  (keyup.enter)="emitValue(txtSearchInput.value)"
+  (keyup)="onKeyPress(txtSearchInput.value)"
   #txtSearchInput
 />
